fix button anchor targets and paragraph/height spacing

--- a/portfolio.css
+++ b/portfolio.css
@@ -30,12 +30,19 @@ NAV
 	display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+	height: 100%;
+	padding-bottom: 12%;
 }
 
 .other-nav {
 	background: rgba(52,73,94, 0.7);
 }
+
+/* .nav-link:hover {
+	color: rgba(52,73,94, 0.7);
+	background: white;
+	padding: 1%;
+} */
 
 .nav-list {
 	flex: 1;
@@ -44,8 +51,6 @@ NAV
     /* width: 10%; */
     font-weight: bold;
     margin-top: 3%;
-    padding-top: 1%;
-    padding-bottom: 1%;
     text-align: center;
     margin-left: 1.5%;
 }
@@ -309,7 +314,6 @@ CONTACT
 
 	.bio, p, .contact-info, li {
 		font-size: 0.7rem;
-		margin: 4%;
 	}
 
 	.link {
@@ -325,9 +329,17 @@ CONTACT
 
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
 	.nav-list {
 		flex-basis: 100%;
 		max-width: 100%;
+	}
+
+	.about-container {
+		height: 700px;
+	}
+
+	.nav-link {
+		padding-bottom: 6%;
 	}
 }
